--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+avian3d = "0.3.1"
 bevy = "0.16.1"
 bevy_ecs_tilemap = "0.16.0"
 noise = "0.9.0"
